other-vpol/require-qos-guaranteed/.kyverno-test/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
  - name: qos-demo-ctr
    image: thisdoesnotexist:1.1.1
    resources:
      limits:
        memory: "200Mi"
        cpu: "700m"
      requests:
        memory: "200Mi"
        cpu: "700m"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
  - name: qos-demo-ctr
    image: thisdoesnotexist:1.1.1
    resources:
      limits:
        memory: "200Mi"
        cpu: "700m"
      requests:
        memory: "200Mi"
        cpu: "700m"
  - name: seconddemo
    image: thisdoesnotexist:1.1.1
    resources:
      limits:
        memory: "300Mi"
        cpu: "500m"
      requests:
        memory: "300Mi"
        cpu: "500m"
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
  - name: qos-demo-ctr
    image: thisdoesnotexist:1.1.1
    resources:
      limits:
        memory: "400Mi"
        cpu: "700m"
      requests:
        memory: "200Mi"
        cpu: "700m"
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
  - name: qos-demo-ctr
    image: thisdoesnotexist:1.1.1
    resources:
      limits:
        memory: "200Mi"
        cpu: "900m"
      requests:
        memory: "200Mi"
        cpu: "700m"
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
  - name: qos-demo-ctr
    image: thisdoesnotexist:1.1.1
    resources:
      limits:
        memory: "200Mi"
        cpu: "700m"
      requests:
        memory: "200Mi"
        cpu: "700m"
  - name: secondname
    image: thisdoesnotexist:1.1.1
    resources:
      limits:
        memory: "200Mi"
        cpu: "800m"
      requests:
        memory: "200Mi"
        cpu: "700m"
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04-zero
spec:
  containers:
  - name: qos-demo-ctr
    image: thisdoesnotexist:1.1.1
    resources:
      requests:
        memory: "0Mi"
        cpu: "0"
      limits:
        memory: "0Mi"
        cpu: "0"
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod05-init
spec:
  initContainers:
  - name: init
    image: thisdoesnotexist:1.1.1
  containers:
  - name: qos-demo-ctr
    image: thisdoesnotexist:1.1.1
    resources:
      requests:
        memory: "200Mi"
        cpu: "700m"
      limits:
        memory: "200Mi"
        cpu: "700m"
---
apiVersion: v1
kind: Pod
metadata:
  name: exception-qos
spec:
  containers:
  - name: qos-demo-ctr
    image: busybox
  - name: sibling
    image: busybox
    resources:
      requests: {memory: "100Mi", cpu: "1"}
      limits: {memory: "100Mi", cpu: "1"}
