other-vpol/require-qos-guaranteed/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-qos-guaranteed
policies:
- ../require-qos-guaranteed.yaml
resources:
- resource.yaml
exceptions:
- exceptions.yaml
results:
- isValidatingPolicy: true
  kind: Pod
  policy: require-qos-guaranteed
  resources:
  - badpod01
  - badpod02
  - badpod03
  - badpod04-zero
  - badpod05-init
  result: fail
- isValidatingPolicy: true
  kind: Pod
  policy: require-qos-guaranteed
  resources:
  - goodpod01
  - goodpod02
  - exception-qos
  result: pass
